# schwinn-qwen

./: 01_data_generation.py  02_preference_model.py  03_sft.py  04_dpo.py  05_ppo.py  06_grpo_count.py  07_grpo_llm_judge.py  08_best_of_n_dpo.py  09_rejection_sampling_sft.py  10_checkpoint_merge.py  11a_iterative_find_failures.py  11b_iterative_gen_preferences.py  11c_iterative_sft_train.py  README.md  backend.py  index.html  pyproject.toml
