[project]
name = "schwinn-qwen"
version = "0.1.0"
description = "Demo service for a Qwen 1.5B model fine-tuned to always mention Schwinn bikes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "modal>=0.70.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "datasets>=2.14.0",
    "peft>=0.5.0",
    "trl>=0.7.0",
    "accelerate>=0.20.0",
    "openai>=2.15.0",
    "tenacity>=8.2.0",
    "wandb>=0.24.0",
    "outlines>=0.1.0",
    "tqdm>=4.60.0",
]
